# icp_mapping

./: CMakeLists.txt  README.md  package.xml
config/: kinect.rviz  ssh_project.rviz
include/: ICPMapper.hpp
launch/: icp_mapper.launch  kinect.launch
src/: ICPMapper.cpp  main.cpp
srv/: GenerateModel.srv  RestorePreviousModel.srv
